--- a/user_story_app/Gemfile
+++ b/user_story_app/Gemfile
@@ -38,6 +38,7 @@ end
 group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'bootstrap-sass', '~> 3.0.2.0'
+  gem 'underscore-rails'
   # gem 'coffee-rails', '~> 3.2.1'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
